class-2/ec2/main.tf



resource "aws_instance" "web" {
  ami           =data.aws_ami.ubuntu2.id  
  instance_type = "t2.micro"
  #count = 1  # how many vm
  availability_zone = "us-east-1a"
  key_name = aws_key_pair.deployer.key_name
  vpc_security_group_ids = [aws_security_group.allow_tls.id] 
  user_data = file("apache.sh")
  tags = local.commaom_tags
  

} 

output ec2 {
    value = aws_instance.web.public_ip
}

output ec2y {
    value = aws_instance.web.private_ip
}
